k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-production
  labels:
    project: devops-eft
    environment: production
